--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -258,9 +258,9 @@ img {
   font-weight: var(--font-semi);
   border-radius: 0.5rem;
 }
-.button:hover {
+/* .button:hover {
   box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
-}
+} */
 
 /* ===== ABOUT =====*/
 .about__container {
