--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,9 +51,9 @@
 ::after {
   box-sizing: border-box;
 }
-html {
+/* html {
   scroll-behavior: smooth;
-}
+} */
 body {
   margin: var(--header-height) 0 0 0;
   font-family: var(--body-font);
@@ -185,7 +185,7 @@ img {
   color: var(--second-color);
 }
 .nav__toggle {
-  color: var(--second-color);
+  color: var(--first-color);
   font-size: 1.5rem;
   cursor: pointer;
 }
@@ -247,7 +247,6 @@ img {
   width: 295px;
   top: 50px */
   display: none;
-  color: #fff;
 }
 
 /*BUTTONS*/
@@ -296,7 +295,7 @@ img {
 /* ===== SKILLS =====*/
 .skills__container {
   row-gap: 2rem;
-  text-align: center;
+  /* text-align: center; */
 }
 .skills__subtitle {
   margin-bottom: var(--mb-2);
@@ -353,6 +352,8 @@ img {
 
 /* ===== WORK =====*/
 .work__container {
+  /* grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(, 1fr); */
   row-gap: 2rem;
 }
 .work__img {
@@ -475,7 +476,7 @@ img {
   .about__container,
   .skills__container {
     grid-template-columns: repeat(2, 1fr);
-    align-items: center;
+    /* align-items: center; */
     text-align: initial;
   }
 
@@ -495,9 +496,9 @@ img {
     color: #fff;
   }
   .work__container {
-    grid-template-columns: repeat(3, 1fr);
+    /* grid-template-columns: repeat(3, 1fr); */
     grid-template-rows: repeat(2, 1fr);
-    column-gap: 2rem;
+    column-gap: 1 rem;
   }
   .contact__form {
     width: 360px;
@@ -525,4 +526,108 @@ img {
     right: 10%;
     display: block;
   }
+
+  /* Image Slider */
+
+  .mySlides {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    /* box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25); */
+    border-radius: 1rem;
+  }
+  .mySlides img {
+    vertical-align: middle;
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+    border-radius: 1rem;
+  }
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 800px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: #bbb;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
 }
