--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -555,7 +555,7 @@ img {
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
-  position: absolute;
+  position: relative;
   top: 50%;
   width: auto;
   padding: 16px;
