--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -249,6 +249,11 @@ img {
   display: none;
 }
 
+.display__img {
+  margin-top: 1rem;
+  width: 100%;
+}
+
 /*BUTTONS*/
 .button {
   display: inline-block;
@@ -368,7 +373,6 @@ img {
 .work__img img:hover {
   transform: scale(1.1);
 }
-
 /* ===== CONTACT =====*/
 .contact__input {
   width: 100%;
